<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.aldomora.capturadedatos.ConfirmarDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tituloConf"
        android:textSize="@dimen/titleSize"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/interSpace2"
        android:textSize="@dimen/textSizeConf"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaConf"
            android:layout_marginTop="@dimen/interSpace2"
            android:textSize="@dimen/textSizeConf"/>
        <TextView
            android:id="@+id/tvFecha"
            android:layout_marginLeft="@dimen/textSpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/interSpace2"
            android:textSize="@dimen/textSizeConf"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telConf"
            android:layout_marginTop="@dimen/interSpace2"
            android:textSize="@dimen/textSizeConf"/>
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_marginLeft="@dimen/textSpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/interSpace2"
            android:textSize="@dimen/textSizeConf"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailConf"
            android:layout_marginTop="@dimen/interSpace2"
            android:textSize="@dimen/textSizeConf"/>
        <TextView
            android:id="@+id/tvEmail"
            android:layout_marginLeft="@dimen/textSpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/interSpace2"
            android:textSize="@dimen/textSizeConf"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descConf"
            android:layout_marginTop="@dimen/interSpace2"
            android:textSize="@dimen/textSizeConf"/>
        <TextView
            android:id="@+id/tvDesc"
            android:layout_marginLeft="@dimen/textSpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/interSpace2"
            android:textSize="@dimen/textSizeConf"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/editButton"
        android:layout_marginTop="@dimen/interSpace2"
        android:textSize="@dimen/textSizeConf"/>
</LinearLayout>
